--- a/app/assets/scss/layout/l-wrap.scss
+++ b/app/assets/scss/layout/l-wrap.scss
@@ -3,17 +3,12 @@ Wrap
 
 Added offwhite background for styleguide purposes.
 
-.l-wrap--small - Smaller.
-.l-wrap--big - Bigger.
-.l-wrap--vertical - Only vertical.
-.l-wrap--horizontal - Only horizontal.
-.l-wrap--top - Only top padding.
-.l-wrap--bottom - Only bottom padding.
+.l-wrap - Regular variant.
 .l-wrap--no-top - No top padding.
 .l-wrap--no-bottom - No bottom padding.
 
 Markup:
-<div class="l-wrap {{modifier_class}}">Text.</div>
+<div class="{{modifier_class}}">Text.</div>
 
 Styleguide 2.1.
 */
@@ -24,46 +19,21 @@ Styleguide 2.1.
   margin-left: auto;
   
   @include clearfix;
-  @include collapse-children;
+  @include reset-children;
 }
 
 .l-wrap {
-  @include offset();
-}
+  padding: sem(b, 2);
 
-.l-wrap--small {
-  @include padding(em($ratio--s) null);
-  
-  @include media($phablet) {
-    @include padding(em($ratio--b) null);
+  @include media($bp__phablet) {
+    padding: sem(m);
   }
-  @include media($large) {
-    @include padding(em($ratio--m) null);
+  @include media($bp__tablet) {
+    padding: sem(l);
   }
-}
-
-.l-wrap--big {
-  @include padding(em($ratio--m) null);
-
-  @include media($phablet) {
-    @include padding(em($ratio--l) null);
+  @include media($bp__desktop) {
+    padding: sem(xl);
   }
-  @include media($large) {
-    @include padding(em($ratio--xl) null);
-  }
-}
-
-.l-wrap--vertical {
-  @include offset(vertical);
-}
-.l-wrap--horizontal {
-  @include offset(horizontal);
-}
-.l-wrap--top {
-  @include offset(top);
-}
-.l-wrap--bottom {
-  @include offset(bottom);
 }
 
 .l-wrap--no-top {
