--- a/app/assets/scss/objects/o-slider.scss
+++ b/app/assets/scss/objects/o-slider.scss
@@ -37,7 +37,7 @@ Styleguide 4.54.
 
 [class^="o-slider__arrow"],
 [class*=" o-slider__arrow"] {
-  padding: em($ratio--b);
+  padding: sem(b);
   text-decoration: none; 
 }
 
