--- a/app/assets/scss/proto/p-push.scss
+++ b/app/assets/scss/proto/p-push.scss
@@ -1,101 +1,116 @@
+/*
+Push
+
+.p-push--auto - Horizontal margins set to auto.
+.p-push--1 - Margin from all sides.
+.p-push--20 - Margin applied to verticals only.
+.p-push--03 - Margin applied to horizontals only.
+.p-push--0004 - Margin only from one side.
+
+Markup:
+<div class="{{modifier_class}}">Offset element.</div>
+
+Styleguide 5.3.
+*/
+
 .p-push--auto {
   @include margin(null auto);
 }
 
 // All directions
 .p-push--1 {
-  margin: em($ratio--s);
+  margin: sem(s);
 }
 .p-push--2 {
-  margin: em($ratio--b);
+  margin: sem(b);
 }
 .p-push--3 {
-  margin: em($ratio--m);
+  margin: sem(m);
 }
 .p-push--4 {
-  margin: em($ratio--l);
+  margin: sem(l);
 }
 
 // Vertical
 .p-push--10 {
-  @include margin(em($ratio--s) null);
+  @include margin(sem(s) null);
 }
 .p-push--20 {
-  @include margin(em($ratio--b) null);
+  @include margin(sem(b) null);
 }
 .p-push--30 {
-  @include margin(em($ratio--m) null);
+  @include margin(sem(m) null);
 }
 .p-push--40 {
-  @include margin(em($ratio--l) null);
+  @include margin(sem(l) null);
 }
 
 // Horizontal
 .p-push--01 {
-  @include margin(null em($ratio--s));
+  @include margin(null sem(s));
 }
 .p-push--02 {
-  @include margin(null em($ratio--b));
+  @include margin(null sem(b));
 }
 .p-push--03 {
-  @include margin(null em($ratio--m));
+  @include margin(null sem(m));
 }
 .p-push--04 {
-  @include margin(null em($ratio--l));
+  @include margin(null sem(l));
 }
 
 // Top
 .p-push--1000 {
-  margin-top: em($ratio--s);
+  margin-top: sem(s);
 }
 .p-push--2000 {
-  margin-top: em($ratio--b);
+  margin-top: sem(b);
 }
 .p-push--3000 {
-  margin-top: em($ratio--m);
+  margin-top: sem(m);
 }
 .p-push--4000 {
-  margin-top: em($ratio--l);
+  margin-top: sem(l);
 }
 
 // Right
 .p-push--0100 {
-  margin-right: em($ratio--s);
+  margin-right: sem(s);
 }
 .p-push--0200 {
-  margin-right: em($ratio--b);
+  margin-right: sem(b);
 }
 .p-push--0300 {
-  margin-right: em($ratio--m);
+  margin-right: sem(m);
 }
 .p-push--0400 {
-  margin-right: em($ratio--l);
+  margin-right: sem(l);
 }
 
 // Bottom
 .p-push--0010 {
-  margin-bottom: em($ratio--s);
+  margin-bottom: sem(s);
 }
 .p-push--0020 {
-  margin-bottom: em($ratio--b);
+  margin-bottom: sem(b);
 }
 .p-push--0030 {
-  margin-bottom: em($ratio--m);
+  margin-bottom: sem(m);
 }
 .p-push--0040 {
-  margin-bottom: em($ratio--l);
+  margin-bottom: sem(l);
 }
 
 // Left
 .p-push--0001 {
-  margin-left: em($ratio--s);
+  margin-left: sem(s);
 }
 .p-push--0002 {
-  margin-left: em($ratio--b);
+  margin-left: sem(b);
 }
 .p-push--0003 {
-  margin-left: em($ratio--m);
+  margin-left: sem(m);
 }
 .p-push--0004 {
-  margin-left: em($ratio--l);
+  margin-left: sem(l);
 }
