--- a/app/assets/jade/templates/_guide.jade
+++ b/app/assets/jade/templates/_guide.jade
@@ -1,5 +1,5 @@
 block template-variables
-  - var pageSettings = {title: "Styleguide", description: "Styleguide description."}
+  - var page = {title: "Styleguide", description: "Styleguide description."}
 
 extends _shared
 
