PUG Changed _shared template lang to "en"

--- a/app/assets/pug/templates/_shared.pug
+++ b/app/assets/pug/templates/_shared.pug
@@ -2,7 +2,7 @@ block template-variables
   - var page = {title: "chj", description: "Starter framework."}
 
 doctype
-html.no-js(lang="cs")
+html.no-js(lang="en")
   head
     block template-head
       meta(charset="utf-8")
