--- a/app/assets/pug/templates/_shared.pug
+++ b/app/assets/pug/templates/_shared.pug
@@ -1,15 +1,15 @@
 block template-variables
-  - var page = {title: "chj", description: "Starter framework."}
+  - var page = {title: "Christian Jánský – Framework", description: "Project starter kit."}
 
 doctype
 html.no-js(lang="en")
   head
     block template-head
       meta(charset="utf-8")
-      meta(http-equiv="X-UA-Compatible", content="IE=edge, chrome=1")
+      meta(http-equiv="X-UA-Compatible", content="ie=edge")
       title!= page.title
       meta(name="description", content=page.description)
-      meta(name="viewport" content="width=device-width, initial-scale=1.0")
+      meta(name="viewport" content="width=device-width, initial-scale=1, minimal-ui")
 
   body
     block template-body
