PUG Added author meta tag in _shared

--- a/app/assets/pug/templates/_shared.pug
+++ b/app/assets/pug/templates/_shared.pug
@@ -9,6 +9,7 @@ html.no-js(lang="en")
       meta(http-equiv="X-UA-Compatible", content="ie=edge")
       title!= page.title
       meta(name="description", content=page.description)
+      meta(name="author", content="Christian Jánský")
       meta(name="viewport" content="width=device-width, initial-scale=1, minimal-ui")
 
   body
