PUG Changed _guide title & description meta

--- a/app/assets/pug/templates/_guide.pug
+++ b/app/assets/pug/templates/_guide.pug
@@ -1,7 +1,7 @@
 extends _shared
 
 block template-variables
-  - var page = {title: "Styleguide", description: "Styleguide description."}
+  - var page = {title: "Christian Jánský — Styleguide", description: "Project starter kit styleguide."}
 
 append template-head
   <!-- site:css -->
